--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lily's Potty Power!</title>
+    <title>Lily's Potty Timer!</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Lily's Potty Power!</h1>
+    <h1>Lily's Potty Timer!</h1>
     <div class="gauge-container">
         <svg class="gauge" viewBox="0 0 200 200">
             <circle class="gauge-background" cx="100" cy="100" r="90" />
